# SmartCalc-v1

./: .gitignore  CMakeLists.txt  CreditCalc.ui  SmartCalc_ru_RU.ts  creditcalc.cpp  creditcalc.h  global.cpp  global.h  graf_win.cpp  graf_win.h  graf_win.ui  graff.cpp  main.cpp  old_sparrvio.cpp  sparrvio.cpp  sparrvio.h  sparrvio.ui  win_for_x.cpp  win_for_x.h  win_for_x.ui  x_value.ui
src/: Makefile  calc.c  credit_calc_ann.c  credit_calc_diff.c  my_main.c  new_main.c  notation.c  parser.c  s21_SmartCalc.h  second_func.c  test_Smart  tests.info  validator.c
src/SmartCalc/: CMakeLists.txt  CreditCalc.ui  SmartCalc_ru_RU.ts  creditcalc.cpp  creditcalc.h  deposit.cpp  deposit.h  deposit.ui  global.cpp  global.h  graf_win.cpp  graf_win.h  graf_win.ui  graff.cpp  graff.h  graff.ui  main.cpp  sparrvio.cpp  sparrvio.h  sparrvio.ui  win_for_x.cpp  win_for_x.h  win_for_x.ui
src/SmartCalc/doxygen/html/: annotated.html  class_credit_calc-members.html  class_credit_calc.html  class_deposit-members.html  class_deposit.html  class_graff-members.html  class_graff.html  class_q_c_p_abstract_item.html  class_q_c_p_abstract_legend_item.html  class_q_c_p_abstract_paint_buffer.html  class_q_c_p_abstract_plottable.html  class_q_c_p_abstract_plottable1_d.html  class_q_c_p_axis.html  class_q_c_p_axis_painter_private.html  (+223 more)
src/SmartCalc/src/: Makefile  calc.c  credit_calc_ann.c  credit_calc_diff.c  deposit_calc.c  main.c  my_main.c  notation.c  parser.c  s21_SmartCalc.h  validator.c
src/report/: index-sort-f.html  index-sort-l.html  index.html
src/report/src/: calc.c.func-sort-c.html  calc.c.func.html  calc.c.gcov.html  credit_calc_ann.c.func-sort-c.html  credit_calc_ann.c.func.html  credit_calc_ann.c.gcov.html  credit_calc_diff.c.func-sort-c.html  credit_calc_diff.c.func.html  credit_calc_diff.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  my_main.c.func-sort-c.html  my_main.c.func.html  my_main.c.gcov.html  notation.c.func-sort-c.html  notation.c.func.html  notation.c.gcov.html  parser.c.func-sort-c.html  parser.c.func.html  parser.c.gcov.html  validator.c.func-sort-c.html  validator.c.func.html  validator.c.gcov.html
src/test/: test_SmartCalc.c  test_SmartCalc.h
(+58 files in other folders)
